2005-01-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/psd.c (ReadPSDImage): Fix stack overflow vulnerability
	reported by Andrei Nigmatulin.

2005-01-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* win2k/IMDisplay/IMDisplayDoc.cpp (DoReadImage): Ensure that
	image is in RGB color space after being read since this is what
	Windows expects.

2005-01-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* NEWS: Updated with latest news.
	* lcms: Updated to LCMS 1.14.

2005-01-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/jp2.c (ReadJP2Image): Handle images in YCBCR colorspace.
	Retrieve and store an ICC ICM color profile if present.
	* PerlMagick/t/tiff/read.t: Added test for reading truecolor
	planar TIFF image.
	* coders/tiff.c (ReadTIFFImage):  Fixed stripped TIFF reader.

2005-01-04  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (WriteTIFFImage): Only set TIFFTAG_PREDICTOR to 2
	for bits-per-sample values that libtiff supports.

2004-12-28  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (ReadTIFFImage): Fix overflow while computing
	colormap size.
	* magick/image.h (MaxRGBGivenBits): New macro to obtain maximum
	value represented in a given number of bits.

2004-12-28  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (WriteTIFFImage): TrueColor 16-bits/sample RGB
	images were being written incorrectly on little-endian CPUs.
	Added byte swapping to fix this problem.

2004-12-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/bmp.c (WriteBMPImage): Handle the case where the image
	has an over-sized colormap.  Was writing on unallocated heap memory.
	* coders/dib.c (WriteDIBImage): Handle the case where the image
	has an over-sized colormap.  Was writing on unallocated heap memory.

2004-12-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/gem.c (Modulate): Hue argument now represents a rotation