@@ -1,5 +1,5 @@
 /*
-% Copyright (C) 2003 GraphicsMagick Group
+% Copyright (C) 2003, 2004 GraphicsMagick Group
 % Copyright (C) 2002 ImageMagick Studio
 % Copyright 1991-1999 E. I. du Pont de Nemours and Company
 %
@@ -200,27 +200,27 @@ static Image *ReadTGAImage(const ImageInfo *image_info,ExceptionInfo *exception)
       tga_info.height=ReadBlobLSBShort(image);
       tga_info.bits_per_pixel=ReadBlobByte(image);
       tga_info.attributes=ReadBlobByte(image);
-      LogMagickEvent(CoderEvent,GetMagickModule(),
-                     "ImageType=%s CMapType=%u CMapStart=%u CMapLength=%u CMapDepth=%u\n  XOffset=%u YOffset=%u Width=%u Height=%u PixelDepth=%u Attributes=0x%.2x",
-                     ((tga_info.image_type == TGAColormap) ? "Colormapped" :
-                      (tga_info.image_type == TGARGB) ? "TrueColor" :
-                      (tga_info.image_type == TGAMonochrome) ? "Monochrome" :
-                      (tga_info.image_type == TGARLEColormap) ? "Colormapped-RLE" :
-                      (tga_info.image_type == TGARLERGB) ? "Truecolor-RLE" :
-                      (tga_info.image_type == TGARLEMonochrome) ? "Monochrome-RLE" :
-                      "Unknown"),
-                     (unsigned int) tga_info.colormap_type,
-                     (unsigned int) tga_info.colormap_index,
-                     (unsigned int) tga_info.colormap_length,
-                     (unsigned int) tga_info.colormap_size,
-                     tga_info.x_origin, tga_info.y_origin, tga_info.width, tga_info.height,
-                     (unsigned int) tga_info.bits_per_pixel,
-                     tga_info.attributes);
+      (void) LogMagickEvent(CoderEvent,GetMagickModule(),
+                            "ImageType=%s CMapType=%u CMapStart=%u CMapLength=%u CMapDepth=%u\n  XOffset=%u YOffset=%u Width=%u Height=%u PixelDepth=%u Attributes=0x%.2x",
+                            ((tga_info.image_type == TGAColormap) ? "Colormapped" :
+                             (tga_info.image_type == TGARGB) ? "TrueColor" :
+                             (tga_info.image_type == TGAMonochrome) ? "Monochrome" :
+                             (tga_info.image_type == TGARLEColormap) ? "Colormapped-RLE" :
+                             (tga_info.image_type == TGARLERGB) ? "Truecolor-RLE" :
+                             (tga_info.image_type == TGARLEMonochrome) ? "Monochrome-RLE" :
+                             "Unknown"),
+                            (unsigned int) tga_info.colormap_type,
+                            (unsigned int) tga_info.colormap_index,
+                            (unsigned int) tga_info.colormap_length,
+                            (unsigned int) tga_info.colormap_size,
+                            tga_info.x_origin, tga_info.y_origin, tga_info.width, tga_info.height,
+                            (unsigned int) tga_info.bits_per_pixel,
+                            tga_info.attributes);
                    
       /*
         Initialize image structure.
       */
-      alpha_bits=(tga_info.attributes & 0x0F);
+      alpha_bits=(tga_info.attributes & 0x0FU);
       image->matte=(alpha_bits > 0);
       image->columns=tga_info.width;
       image->rows=tga_info.height;
@@ -252,7 +252,7 @@ static Image *ReadTGAImage(const ImageInfo *image_info,ExceptionInfo *exception)
           (tga_info.image_type == TGARLEColormap) ||
           (tga_info.image_type == TGARLEMonochrome))
         {
-          LogMagickEvent(CoderEvent,GetMagickModule(),"Setting PseudoClass");
+          (void) LogMagickEvent(CoderEvent,GetMagickModule(),"Setting PseudoClass");
           image->storage_class=PseudoClass;
         }
 
@@ -268,8 +268,8 @@ static Image *ReadTGAImage(const ImageInfo *image_info,ExceptionInfo *exception)
           if (tga_info.colormap_type != 0)
             {
               image->colors=tga_info.colormap_length;
-              LogMagickEvent(CoderEvent,GetMagickModule(),
-                             "Using existing colormap with %lu colors.",image->colors);
+              (void) LogMagickEvent(CoderEvent,GetMagickModule(),
+                                    "Using existing colormap with %lu colors.",image->colors);
 
             }
           else
@@ -278,19 +278,19 @@ static Image *ReadTGAImage(const ImageInfo *image_info,ExceptionInfo *exception)
                 Apply grayscale colormap.
               */
               image->colors=(0x01U << tga_info.bits_per_pixel);
-              LogMagickEvent(CoderEvent,GetMagickModule(),
-                             "Applying grayscale colormap with %lu colors.",image->colors);
+              (void) LogMagickEvent(CoderEvent,GetMagickModule(),
+                                    "Applying grayscale colormap with %lu colors.",image->colors);
               if (!AllocateImageColormap(image,image->colors))
                 ThrowReaderException(ResourceLimitError,MemoryAllocationFailed,
                                      image);
             }
         }
 
-      LogMagickEvent(CoderEvent,GetMagickModule(),
-                     "StorageClass=%s Matte=%s Depth=%lu Grayscale=%s",
-                     ((image->storage_class == DirectClass) ? "DirectClass" : "PseduoClass"),
-                     (image->matte ? "True" : "False"), image->depth,
-                     (is_grayscale ? "True" : "False"));
+      (void) LogMagickEvent(CoderEvent,GetMagickModule(),
+                            "StorageClass=%s Matte=%s Depth=%lu Grayscale=%s",
+                            ((image->storage_class == DirectClass) ? "DirectClass" : "PseduoClass"),
+                            (image->matte ? "True" : "False"), image->depth,
+                            (is_grayscale ? "True" : "False"));
     
       if (tga_info.id_length != 0)
         {
@@ -431,9 +431,7 @@ static Image *ReadTGAImage(const ImageInfo *image_info,ExceptionInfo *exception)
                         }
                       else
                         {
-                          pixel.red=ScaleCharToQuantum(index);
-                          pixel.green=ScaleCharToQuantum(index);
-                          pixel.blue=ScaleCharToQuantum(index);
+                          pixel.blue=pixel.green=pixel.red=ScaleCharToQuantum(index);
                         }
                       break;
                     }
@@ -733,6 +731,7 @@ static unsigned int WriteTGAImage(const ImageInfo *image_info,Image *image)
     *targa_pixels;
 
   unsigned int
+    write_grayscale,
     status;
 
   unsigned long
@@ -751,10 +750,48 @@ static unsigned int WriteTGAImage(const ImageInfo *image_info,Image *image)
   scene=0;
   do
     {
+      write_grayscale=False;
+
+      /*
+        If requested output is grayscale, then write grayscale.
+      */
+      if ((image_info->type == GrayscaleType) ||
+          (image_info->type == GrayscaleMatteType))
+        write_grayscale=True;
+
+      /*
+        Convert colorspace to an RGB-compatible type.
+      */
+      (void) TransformColorspace(image,RGBColorspace);
+
+      /*
+        If some other type has not been requested and the image is
+        grayscale, then write a grayscale image unless the image
+        contains an alpha channel.
+      */
+      if (((image_info->type != TrueColorType) &&
+           (image_info->type != TrueColorMatteType) &&
+           (image_info->type != PaletteType) &&
+           (image->matte == False)) &&
+          IsGrayImage(image,&image->exception))
+        write_grayscale=True;
+
+      /*
+        If there are too many colors for colormapped output or the
+        image contains an alpha channel, then promote to TrueColor.
+      */
+      if (((write_grayscale == False) &&
+           (image->storage_class == PseudoClass) &&
+           (image->colors > 256)) ||
+          (image->matte == True))
+        {
+          SyncImage(image);
+          image->storage_class=DirectClass;
+        }
+
       /*
         Initialize TGA raster file header.
       */
-      TransformColorspace(image,RGBColorspace);
       targa_info.id_length=0;
       attribute=GetImageAttribute(image,"comment");
       if (attribute != (const ImageAttribute *) NULL)
@@ -769,11 +806,28 @@ static unsigned int WriteTGAImage(const ImageInfo *image_info,Image *image)
       targa_info.height=(unsigned short) image->rows;
       targa_info.bits_per_pixel=8;
       targa_info.attributes=0;
-      if ((image->storage_class == DirectClass) || (image->colors > 256))
+      if (write_grayscale == True)
+        {
+          /*
+            Grayscale without Colormap
+          */
+          (void) LogMagickEvent(CoderEvent,GetMagickModule(),
+                                "Writing Grayscale raster ...");
+          targa_info.image_type=TargaMonochrome;
+	  targa_info.bits_per_pixel=8;
+	  targa_info.colormap_type=0;
+          targa_info.colormap_index=0;
+          targa_info.colormap_length=0;
+          targa_info.colormap_size=0;	
+        }
+      else if (image->storage_class == DirectClass)
         {
           /*
             Full color TGA raster.
           */
+          (void) LogMagickEvent(CoderEvent,GetMagickModule(),
+                                "Writing TrueColor raster ...");
+
           targa_info.image_type=TargaRGB;
           targa_info.bits_per_pixel=24;
           if (image->matte)
@@ -782,11 +836,13 @@ static unsigned int WriteTGAImage(const ImageInfo *image_info,Image *image)
               targa_info.attributes=8;  /* # of alpha bits */
             }
         }
-      else
+     else
         {
           /*
             Colormapped TGA raster.
           */
+          (void) LogMagickEvent(CoderEvent,GetMagickModule(),
+                                "Writing ColorMapped raster ..." );
           targa_info.image_type=TargaColormap;
           targa_info.colormap_type=1;
           targa_info.colormap_index=0;
@@ -851,17 +907,38 @@ static unsigned int WriteTGAImage(const ImageInfo *image_info,Image *image)
           for (x=0; x < (long) image->columns; x++)
             {
               if (targa_info.image_type == TargaColormap)
-                *q++=indexes[x];
+                {
+                  /* Colormapped */
+                  *q++=*indexes;
+                  indexes++;
+                }
+              else if (targa_info.image_type == TargaMonochrome)
+                {
+                  /* Grayscale */
+                  if (image->storage_class == PseudoClass)
+                    {
+                      if (image->is_grayscale)
+                        *q++=ScaleQuantumToChar(image->colormap[*indexes].red);
+                      else
+                        *q++=PixelIntensityToQuantum(&image->colormap[*indexes]);
+                      indexes++;
+                    }
+                  else
+                    {
+                      if (image->is_grayscale)
+                        *q++=ScaleQuantumToChar(p->red);
+                      else
+                        *q++=PixelIntensityToQuantum(p);
+                    }
+                }
               else
                 {
+                  /* TrueColor RGB */
                   *q++=ScaleQuantumToChar(p->blue);
                   *q++=ScaleQuantumToChar(p->green);
                   *q++=ScaleQuantumToChar(p->red);
-                  if (image->colorspace == CMYKColorspace)
-                    *q++=ScaleQuantumToChar(p->opacity);
-                  else
-                    if (image->matte)
-                      *q++=ScaleQuantumToChar(MaxRGB-p->opacity);
+                  if (image->matte)
+                    *q++=ScaleQuantumToChar(MaxRGB-p->opacity);
                 }
               p++;
             }
